Chart.jsの部分テンプレート追加

--- a/app/views/user/notes/index.html.erb
+++ b/app/views/user/notes/index.html.erb
@@ -52,152 +52,6 @@
 
 </div>
 
-<script>
-
-
-//ドーナツグラフ/////////////////////////////////////////////////////////////////////////////////
-var ctx = document.getElementById('circleChart').getContext('2d');
-ctx.canvas.height = 120; //高さ調整
-var data = {
-  labels: ['とても良い', '良い', '普通', '少し悪い', '悪い'],
-  datasets: [{
-    backgroundColor: ["#1DA7BE", "#38C5D1", "#DBDBDB", "#FF9FAD", "#FF7B8F"],
-    data: [
-        <%= @grouping_conditions_count["とても良い"] %>,
-        <%= @grouping_conditions_count["良い"] %>,
-        <%= @grouping_conditions_count["普通"] %>,
-        <%= @grouping_conditions_count["少し悪い"] %>,
-        <%= @grouping_conditions_count["悪い"] %>
-    ]
-  }],
-    // These labels appear in the legend and in the tooltips when hovering different arcs
-};
-
-var myPieChart = new Chart(ctx, {
-  type: 'doughnut',
-  data: data,
-  options: {
-    legend: {
-      display: true,
-      position: 'right',
-      labels: {
-        padding: 30,
-      }
-    },
-    title: {
-      display: true,
-      text: `<%= params[:month].to_i %>月の肌の調子`,
-      position: 'top'
-    }
-  }
-});
-
-
-//折れ線グラフ/////////////////////////////////////////////////////////////////////////////////
-
-var ctx1 = document.getElementById('myChart').getContext('2d');
-ctx1.canvas.height = 80; //高さ調整
-var data = <%= @condition_list.to_json.html_safe %>
-console.log(data)
-var chart = new Chart(ctx1, {
-// The type of chart we want to create
-  type: 'line',
-
-// The data for our dataset
-  data: {
-    datasets: [{
-      label: `<%= params[:month].to_i %>月の肌の調子`,
-      backgroundColor: 'rgb(56, 197, 209)',
-      borderColor: 'rgb(56, 197, 209)',
-      fill: false,
-      data: data
-    }]
-  },
-
-    // Configuration options go here
-  options: {
-
-    scales: {
-      xAxes: [{
-        type: 'time',
-        time: {
-            unit: 'day'
-        }
-
-      }],
-      yAxes: [{
-        type: 'category',
-        labels: [4,3,2,1,0],
-         ticks: {
-          callback: function(value, index, values) {
-            var jaLabels = {0: "悪い  ", 1:"少し悪い  ", 2:"普通  ", 3:"良い  ", 4:"とても良い  "}
-            return jaLabels[value];
-          }
-        },
-        scaleLabel: {
-          display: true,
-        }
-      }]
-    }
-
-  }
-});
-
-// //横棒グラフ/////////////////////////////////////////////////////////////////////////////////
-
-<% if @todays_items_list.present? %>
-  var ctx2 = document.getElementById('barChart').getContext('2d');
-  ctx2.canvas.height = 100; //高さ調整
-  var data = <%= @todays_items_list.to_json.html_safe %>
-  console.log(data)
-  var scatterChart = new Chart(ctx2, {
-    type: 'line',
-    data: {
-      datasets: [{
-        label: 'Scatter Dataset',
-        backgroundColor: "#FF9FAD",
-        borderColor: "#FF9FAD",
-        fill: false,
-        borderWidth : 15,
-        pointRadius : 0,
-        data: data
-      }]
-    },
-    options: {
-      legend : {
-        display : false
-      },
-      scales: {
-        xAxes: [{
-          type: 'time',
-          time: {
-            unit: 'day'
-          },
-          position: 'bottom',
-          ticks : {
-            beginAtzero :true,
-            stepSize : 1
-          }
-        }],
-        yAxes : [{
-          scaleLabel : {
-            display : false
-          },
-          ticks : {
-            beginAtZero :true,
-            // min : 2,
-            callback: function(value, index, values) {
-              var jaLabels = <%= @my_item_lists_label.html_safe %>
-              // .html_safeは、&gt;&quot;などに変換せずhtmlの形式のまま返してほしい時に使う
-              return jaLabels[value];
-            }
-          }
-        }]
-      }
-    }
-  });
-<% end %>
-
-</script>
+<%= render "chart", doughnut: @grouping_conditions_count, line: @condition_list, bar:@todays_items_list, barlabel:@my_item_lists_label %>
 
 </div>
