--- a/app/assets/stylesheets/user/items.scss
+++ b/app/assets/stylesheets/user/items.scss
@@ -2,6 +2,15 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.genre-btn {
+  background: white; //ボタンの背景色
+  color: #1DA7BE; //ボタンのテキストの色
+  width: 200px;
+  height: 40px;
+  border: 2px solid #38C5D1;
+  margin: 3px;
+}
+
 .item-box {
 	float: left;
 	margin: 20px;
