--- a/app/views/user/users/edit.html.erb
+++ b/app/views/user/users/edit.html.erb
@@ -1,9 +1,10 @@
 <div class="container">
   <div class="row">
     <%= render "layouts/main_button" %>
+    <%= render "layouts/error_messages", model: @user %>
   </div>
 
-  <h3>情報登録変更</h3>
+  <h3>登録情報変更</h3>
 
   <%= form_with :model => @user, url:user_user_path, method: :patch, local: true, class:"form-horizontal" do |f| %>
 
