--- a/app/views/user/notes/index.html.erb
+++ b/app/views/user/notes/index.html.erb
@@ -34,6 +34,7 @@
 
   <div class="row">
     <div class="text-right">
+      <%#= "#{params[:month]}月のデータを表示しています" %>
       <%= form_with url:user_notes_path, method: :get, local: true, class:"form-horizontal" do |f| %>
         <%= f.date_select(:date, { use_month_numbers: true, :discard_day => true, :default => @selected, date_separator: ' / '}) %>
         <%= f.submit "選択した月を表示する", class: "btn btn-primary" %>
