--- a/app/views/user/items/show.html.erb
+++ b/app/views/user/items/show.html.erb
@@ -1,10 +1,9 @@
 <div class="container" data-turbolinks="false">
-
 	<div class="row">
 		<%= render "layouts/main_button" %>
-		<%#= render "layouts/error_messages", model: @review %>
 		  <% if flash[:error].present? %>
 			  <div class="alert alert-danger">
+          <h4><%= pluralize(flash[:error].count, "error") %> prohibited this product from being saved:</h4>
 			    <ul class="errors">
 			      <% flash[:error].each do |e| %>
 			        <li><%= e %></li>
@@ -127,8 +126,6 @@
 		</div>
 	</div>
 </div>
-
-
 <script>
 
 //商品詳細の星/////////////////////////////////////////////////////////////////////////////////
@@ -158,4 +155,3 @@
 	// ↑ raty();だけだと画像のURLが正しく受け取れないので｛｝をつける
 
 </script>
-
