--- a/app/assets/stylesheets/user/tweets.scss
+++ b/app/assets/stylesheets/user/tweets.scss
@@ -16,3 +16,14 @@
   font-size: 12px;
 }
 
+.tweet-text {
+  font-size: 16px;
+  background-color: #E7F1F9;
+  padding: 20px;
+  margin: 10px 0 10px 0;
+  border-radius: 10px;
+}
+
+.comment-table {
+  margin-top: 40px;
+}
