--- a/app/views/user/my_items/index.html.erb
+++ b/app/views/user/my_items/index.html.erb
@@ -21,7 +21,7 @@
 			<% end %>
 		</div>
 		<div class="col-xs-8">
-			<h4>マイアイテム一覧</h4>
+			<h4>マイスキンケア一覧</h4>
 			<table class="table" style="table-layout:fixed;width:100%;">
 				<colgroup>
 			        <col style="width:50%;">
