--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -9,7 +9,7 @@
     	<%= link_to "ログイン", new_user_session_path, class:"btn btn-info" %>
       </div>
       <div class="top-button">
-      <%= link_to 'ゲストログイン（閲覧用）', user_homes_guest_sign_in_path, method: :post, class:"btn btn-info" %>
+      <%= link_to 'ゲストログイン', user_homes_guest_sign_in_path, method: :post, class:"btn btn-info" %>
       </div>
     </div>
   </div>
