--- a/app/assets/stylesheets/user/homes.scss
+++ b/app/assets/stylesheets/user/homes.scss
@@ -17,11 +17,21 @@ text-decoration:underline;
 	background-position: bottom;
 }
 
+.border {
+  width: 100%;
+  height: 30px;
+  background-color: #38C5D1;
+}
+
 .top-headline {
   color: white;
   font-size: 30px;
   margin-top: 70px;
   margin-bottom: 30px;
+}
+
+.main-contents {
+  text-align: center;
 }
 
 ///////////////////////////////////////////////////////////////////////////////////////////////////////
