つぶやき入力欄に入力ヒントを表示

--- a/app/views/user/tweets/index.html.erb
+++ b/app/views/user/tweets/index.html.erb
@@ -32,7 +32,7 @@
 
 					<div>
 						<p>つぶやき内容</p>
-						<%= f.text_area :tweet_text, class: "col-xs-12" %>
+						<%= f.text_area :tweet_text, value:"", placeholder:"つぶやきを155字以内で入力してください。", class: "col-xs-12" %>
 					</div>
 
 					<div>
