--- a/app/assets/stylesheets/user/homes.scss
+++ b/app/assets/stylesheets/user/homes.scss
@@ -32,7 +32,83 @@ text-decoration:underline;
 
 .main-contents {
   text-align: center;
+  margin-bottom: 100px;
 }
+
+.contents-title {
+  color: #1DA7BE;
+  font-size: 35px;
+  font-weight: bold;
+  padding-top: 150px;
+}
+
+.border2 {
+  width: 8%;
+  margin: 20px auto;
+  border-bottom: 5px solid #38C5D1;
+  opacity: 0.5;
+}
+
+.contents-text{
+  font-size: 25px;
+  font-weight: bold;
+  padding-top: 50px;
+  line-height: 40px;
+}
+
+.section {
+  width: 60%;
+  margin: 0 auto;
+  margin-top: 70px;
+}
+
+.section-title {
+  color: #38C5D1;
+  font-size: 25px;
+  padding-top: 20px;
+}
+
+.section-text{
+  font-size: 16px;
+  font-weight: bold;
+  padding-top: 20px;
+  line-height: 40px;
+}
+
+.section-subtext{
+  padding-top: 20px;
+  line-height: 30px;
+}
+
+
+.section-image img {
+  border: 4px solid #38C5D1;
+  border-radius: 200px;
+  float: left;
+}
+
+.text-box{
+  float: left;
+  text-align: left;
+  padding-left: 40px;
+  width: 60%;
+}
+
+.lets{
+  width: 40%;
+  margin: 0 auto;
+  height: 100px;
+  background-color: #FF7B8F;
+  text-align: center;
+}
+
+.lets-text a {
+  font-size: 30px;
+  color: white;
+  line-height: 100px;
+  font-weight: bold;
+}
+
 
 ///////////////////////////////////////////////////////////////////////////////////////////////////////
 .top-button .btn-info {
