--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -25,7 +25,7 @@
   <div class="border2"></div>
     <div class="row">
       <div class="section">
-        <div class="section-image"><img src="/assets/content-image1.png" style="width: 350px; height:350px;"></div>
+        <div class="section-image"><%= image_tag("content-image1.png")%></div>
           <div class="text-box">
             <div class="section-title">１：肌の状態をグラフで確認する</div>
             <div class="section-text">毎日肌の状態と使ったスキンケア商品を記録すると、<br>
@@ -45,13 +45,13 @@
                                     気になる商品の口コミ内容を閲覧したり、<br>
                                     使用した商品の口コミを投稿できます</div>
         </div>
-        <div class="section-image"><img src="/assets/content-image2.png" style="width: 350px; height:350px;"></div>
+        <div class="section-image"><%= image_tag("content-image2.png")%></div>
       </div>
     </div>
 
     <div class="row">
       <div class="section">
-        <div class="section-image"><img src="/assets/content-image3.png" style="width: 350px; height:350px;"></div>
+        <div class="section-image"><%= image_tag("content-image3.png")%></div>
         <div class="text-box">
           <div class="section-title">３：肌の悩みをつぶやく</div>
           <div class="section-text">肌の悩みをつぶやくと、他のユーザーからコメントで<br>
