マイページのデザイン調整

--- a/app/assets/stylesheets/user/notes.scss
+++ b/app/assets/stylesheets/user/notes.scss
@@ -3,10 +3,10 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .information {
-	height: 270px;
+	height: 300px;
 	margin-top: 10px;
-  border-top: 6px solid #1DA7BE;
-  border-bottom: 6px solid #1DA7BE;
+  border-top: 6px solid #9CE2E8;
+  border-bottom: 6px solid #9CE2E8;
 }
 
 .hello-user {
@@ -30,6 +30,6 @@
 }
 
 .chart {
-  margin: 0 auto;
+  margin: 20px auto;
 }
 
