--- a/app/assets/stylesheets/user/homes.scss
+++ b/app/assets/stylesheets/user/homes.scss
@@ -26,8 +26,11 @@ text-decoration:underline;
 .top-headline {
   color: white;
   font-size: 30px;
-  margin-top: 70px;
-  margin-bottom: 30px;
+  margin: 70px 0 30px 30px;
+}
+
+.top-button {
+  margin-left: 30px;
 }
 
 .main-contents {
@@ -140,19 +143,3 @@ text-decoration:underline;
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-//.top-buttons {
-//  margin-top: 20px;
-//  text-align: center;
-//}
-
-//.top-button {
-//  background-color: white;
-//  border: 3px solid #38C5D1;
-//  border-radius: 7px;
-//  width: 220px;
-//  height: 50px;
-//  line-height: 45px;
-//  margin: 30px 0;
-//  text-decoration: none;
-//  color: white;
-//}
