--- a/app/assets/stylesheets/user/items.scss
+++ b/app/assets/stylesheets/user/items.scss
@@ -9,6 +9,11 @@
   height: 40px;
   border: 2px solid #38C5D1;
   margin: 3px;
+  border-radius: 5px;
+  &:hover {
+    background: #38C5D1; //ボタンの背景色
+    color: white; //ボタンのテキストの色
+  }
 }
 
 .item-box {
