--- a/app/views/user/items/show.html.erb
+++ b/app/views/user/items/show.html.erb
@@ -3,7 +3,7 @@
 		<%= render "layouts/main_button" %>
 	  <% if flash[:error].present? %>
 		  <div class="alert alert-danger">
-        <h4><%= pluralize(flash[:error].count, "error") %> prohibited this product from being saved:</h4>
+        <h4><%= pluralize(flash[:error].count, "つの") %> エラーが発生しました</h4>
 		    <ul class="errors">
 		      <% flash[:error].each do |e| %>
 		        <li><%= e %></li>
