--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -80,7 +80,7 @@
                 </div>
               </td>
               <td>
-                  <%= link_to "削除", user_item_review_path(@item, review), method: :delete, item_id: review.item.id, class: "btn btn-danger btn-sm" %>
+                  <%= link_to "削除", admin_item_review_path(@item, review), method: :delete, item_id: review.item.id, class: "btn btn-danger btn-sm" %>
               </td>
             </tr>
           <% end %>
