管理者Topにアイテム総数とつぶやき総数表示

--- a/app/views/admin/items/top.html.erb
+++ b/app/views/admin/items/top.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
-<%= link_to "アイテム一覧", admin_items_path %>
-<%= link_to "つぶやき一覧", admin_tweets_path %>
+<h4>管理者ページへようこそ</h4>
+    <h4>アイテム総数：   <%= @all_item_count %>個</h4>
+    <h4>つぶやき総数：   <%= @all_tweet_count %>件</h4>
 </div>
