--- a/app/views/admin/tweets/show.html.erb
+++ b/app/views/admin/tweets/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <h4>つぶやき詳細画面</h4>
+    <h4>つぶやき詳細</h4>
     <div class="tweet-text">
       <%= @tweet.tweet_text %>
       (<%= @tweet.user.age %>歳/<%= @tweet.user.skin_type %>)
