--- a/app/views/admin/tweets/index.html.erb
+++ b/app/views/admin/tweets/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-<h4>みんなのつぶやき一覧</h4>
+<h4>つぶやき一覧</h4>
       <table class="table table-hover" style="table-layout:fixed;width:100%;">
 
           <colgroup>
