アイテムへの気になる機能を追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SkinNote</title>
+    <title>SkinNotePlus</title>
     <script src="https://kit.fontawesome.com/f21409b83c.js" crossorigin="anonymous"></script>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
