--- a/app/views/user/items/show.html.erb
+++ b/app/views/user/items/show.html.erb
@@ -45,6 +45,21 @@
 				</div>
 			</div>
 
+
+
+
+			<div class="row">
+			<% if @your_interested_item_ids.include?(@item.id) %>
+				<%= link_to "気になるリストから「削除」", user_item_interests_path(@item), method: :delete, class: "col-xs-12 btn btn-primary" %>
+			<% else %>
+				<%= link_to "気になる♡", user_item_interests_path(@item), method: :post, class: "col-xs-12 btn btn-primary" %>
+			<% end %>
+		</div>
+
+
+
+
+
 			<div class="row">
 				<h4>口コミ投稿</h4>
 				<%= form_with model: @review, url:user_item_reviews_path(@item.id), method: :post, local: true, class:"form-horizontal" do |f| %>
