気になるアイテム一覧を追加

--- a/app/views/user/notes/index.html.erb
+++ b/app/views/user/notes/index.html.erb
@@ -22,7 +22,7 @@
           <p>肌質：<%= current_user.skin_type %></p>
         </div>
         <div>
-          <%= link_to "登録情報変更", edit_user_user_path(current_user), class: "btn btn-success" %>
+          <%= link_to "登録情報確認", user_user_path(current_user), class: "btn btn-success" %>
         </div>
       </div>
     </div>
