管理者ページトップにユーザー総数表示

--- a/app/views/admin/items/top.html.erb
+++ b/app/views/admin/items/top.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
 <h4>管理者ページへようこそ</h4>
-    <h4>アイテム総数：   <%= @all_item_count %>個</h4>
-    <h4>つぶやき総数：   <%= @all_tweet_count %>件</h4>
+  <h4>ユーザー総数：   <%= @all_user_count %>人</h4>
+  <h4>アイテム総数：   <%= @all_item_count %>個</h4>
+  <h4>つぶやき総数：   <%= @all_tweet_count %>件</h4>
 </div>
