管理者ページのテーブルデザイン統一

--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 	<h4>アイテム一覧</h4>
 	<%= link_to "アイテム新規作成", new_admin_item_path %>
-	<table class="table">
+	<table class="table table-hover">
 		<thead>
 			<tr>
 				<th></th>
