--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <h4>ユーザー一覧</h4>
-  <table class="table">
+  <table class="table table-hover">
     <thead>
       <tr>
         <th>登録日時</th>
